parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RETURN
    QUOTE
    COMMA
    FUNCTION
    PROMPT
    IF
    NOT
    OR

Grammar

Rule 0     S' -> S
Rule 1     S -> statement S
Rule 2     S -> statement END_LINE S
Rule 3     S -> statement END_LINE
Rule 4     S -> command
Rule 5     S -> command END_LINE
Rule 6     statement -> declarations
Rule 7     statement -> expr
Rule 8     declarations -> VAR ID ASSIGN expr
Rule 9     declarations -> VAR ID ASSIGN relexpr
Rule 10    declarations -> VAR ID
Rule 11    command -> WRITE LPAREN expr RPAREN
Rule 12    command -> WHILE LPAREN expr RPAREN LBRACKET S RBRACKET
Rule 13    command -> WHILE LPAREN relexpr RPAREN LBRACKET S RBRACKET
Rule 14    command -> FOR LPAREN declarations END_LINE relexpr END_LINE expr RPAREN LBRACKET S RBRACKET
Rule 15    expr -> expr PLUS expr
Rule 16    expr -> expr MINUS expr
Rule 17    expr -> expr TIMES expr
Rule 18    expr -> expr DIVIDE expr
Rule 19    expr -> expr MOD expr
Rule 20    expr -> expr INCREMENT
Rule 21    expr -> expr DECREMENT
Rule 22    expr -> ID ASSIGN expr
Rule 23    expr -> NUMBER
Rule 24    expr -> STRINGS
Rule 25    expr -> ID
Rule 26    expr -> LPAREN expr RPAREN
Rule 27    relexpr -> expr LT expr
Rule 28    relexpr -> expr LE expr
Rule 29    relexpr -> expr GT expr
Rule 30    relexpr -> expr GE expr
Rule 31    relexpr -> expr EQUALS expr
Rule 32    relexpr -> expr NE expr
Rule 33    relexpr -> expr AND relexpr
Rule 34    relexpr -> expr AND expr

Terminals, with rules where they appear

AND                  : 33 34
ASSIGN               : 8 9 22
COMMA                : 
DECREMENT            : 21
DIVIDE               : 18
END_LINE             : 2 3 5 14 14
EQUALS               : 31
FOR                  : 14
FUNCTION             : 
GE                   : 30
GT                   : 29
ID                   : 8 9 10 22 25
IF                   : 
INCREMENT            : 20
LBRACKET             : 12 13 14
LE                   : 28
LPAREN               : 11 12 13 14 26
LT                   : 27
MINUS                : 16
MOD                  : 19
NE                   : 32
NOT                  : 
NUMBER               : 23
OR                   : 
PLUS                 : 15
PROMPT               : 
QUOTE                : 
RBRACKET             : 12 13 14
RETURN               : 
RPAREN               : 11 12 13 14 26
STRINGS              : 24
TIMES                : 17
VAR                  : 8 9 10
WHILE                : 12 13
WRITE                : 11
error                : 

Nonterminals, with rules where they appear

S                    : 1 2 12 13 14 0
command              : 4 5
declarations         : 6 14
expr                 : 7 8 11 12 14 15 15 16 16 17 17 18 18 19 19 20 21 22 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 34
relexpr              : 9 13 14 33
statement            : 1 2 3

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . statement S
    (2) S -> . statement END_LINE S
    (3) S -> . statement END_LINE
    (4) S -> . command
    (5) S -> . command END_LINE
    (6) statement -> . declarations
    (7) statement -> . expr
    (11) command -> . WRITE LPAREN expr RPAREN
    (12) command -> . WHILE LPAREN expr RPAREN LBRACKET S RBRACKET
    (13) command -> . WHILE LPAREN relexpr RPAREN LBRACKET S RBRACKET
    (14) command -> . FOR LPAREN declarations END_LINE relexpr END_LINE expr RPAREN LBRACKET S RBRACKET
    (8) declarations -> . VAR ID ASSIGN expr
    (9) declarations -> . VAR ID ASSIGN relexpr
    (10) declarations -> . VAR ID
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    WRITE           shift and go to state 6
    WHILE           shift and go to state 2
    FOR             shift and go to state 5
    VAR             shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 11
    declarations                   shift and go to state 12
    S                              shift and go to state 7
    command                        shift and go to state 13
    statement                      shift and go to state 4

state 1

    (23) expr -> NUMBER .

    PLUS            reduce using rule 23 (expr -> NUMBER .)
    MINUS           reduce using rule 23 (expr -> NUMBER .)
    TIMES           reduce using rule 23 (expr -> NUMBER .)
    DIVIDE          reduce using rule 23 (expr -> NUMBER .)
    MOD             reduce using rule 23 (expr -> NUMBER .)
    INCREMENT       reduce using rule 23 (expr -> NUMBER .)
    DECREMENT       reduce using rule 23 (expr -> NUMBER .)
    RPAREN          reduce using rule 23 (expr -> NUMBER .)
    END_LINE        reduce using rule 23 (expr -> NUMBER .)
    WRITE           reduce using rule 23 (expr -> NUMBER .)
    WHILE           reduce using rule 23 (expr -> NUMBER .)
    FOR             reduce using rule 23 (expr -> NUMBER .)
    VAR             reduce using rule 23 (expr -> NUMBER .)
    ID              reduce using rule 23 (expr -> NUMBER .)
    NUMBER          reduce using rule 23 (expr -> NUMBER .)
    STRINGS         reduce using rule 23 (expr -> NUMBER .)
    LPAREN          reduce using rule 23 (expr -> NUMBER .)
    LT              reduce using rule 23 (expr -> NUMBER .)
    LE              reduce using rule 23 (expr -> NUMBER .)
    GT              reduce using rule 23 (expr -> NUMBER .)
    GE              reduce using rule 23 (expr -> NUMBER .)
    EQUALS          reduce using rule 23 (expr -> NUMBER .)
    NE              reduce using rule 23 (expr -> NUMBER .)
    AND             reduce using rule 23 (expr -> NUMBER .)


state 2

    (12) command -> WHILE . LPAREN expr RPAREN LBRACKET S RBRACKET
    (13) command -> WHILE . LPAREN relexpr RPAREN LBRACKET S RBRACKET

    LPAREN          shift and go to state 14


state 3

    (24) expr -> STRINGS .

    PLUS            reduce using rule 24 (expr -> STRINGS .)
    MINUS           reduce using rule 24 (expr -> STRINGS .)
    TIMES           reduce using rule 24 (expr -> STRINGS .)
    DIVIDE          reduce using rule 24 (expr -> STRINGS .)
    MOD             reduce using rule 24 (expr -> STRINGS .)
    INCREMENT       reduce using rule 24 (expr -> STRINGS .)
    DECREMENT       reduce using rule 24 (expr -> STRINGS .)
    RPAREN          reduce using rule 24 (expr -> STRINGS .)
    END_LINE        reduce using rule 24 (expr -> STRINGS .)
    WRITE           reduce using rule 24 (expr -> STRINGS .)
    WHILE           reduce using rule 24 (expr -> STRINGS .)
    FOR             reduce using rule 24 (expr -> STRINGS .)
    VAR             reduce using rule 24 (expr -> STRINGS .)
    ID              reduce using rule 24 (expr -> STRINGS .)
    NUMBER          reduce using rule 24 (expr -> STRINGS .)
    STRINGS         reduce using rule 24 (expr -> STRINGS .)
    LPAREN          reduce using rule 24 (expr -> STRINGS .)
    LT              reduce using rule 24 (expr -> STRINGS .)
    LE              reduce using rule 24 (expr -> STRINGS .)
    GT              reduce using rule 24 (expr -> STRINGS .)
    GE              reduce using rule 24 (expr -> STRINGS .)
    EQUALS          reduce using rule 24 (expr -> STRINGS .)
    NE              reduce using rule 24 (expr -> STRINGS .)
    AND             reduce using rule 24 (expr -> STRINGS .)


state 4

    (1) S -> statement . S
    (2) S -> statement . END_LINE S
    (3) S -> statement . END_LINE
    (1) S -> . statement S
    (2) S -> . statement END_LINE S
    (3) S -> . statement END_LINE
    (4) S -> . command
    (5) S -> . command END_LINE
    (6) statement -> . declarations
    (7) statement -> . expr
    (11) command -> . WRITE LPAREN expr RPAREN
    (12) command -> . WHILE LPAREN expr RPAREN LBRACKET S RBRACKET
    (13) command -> . WHILE LPAREN relexpr RPAREN LBRACKET S RBRACKET
    (14) command -> . FOR LPAREN declarations END_LINE relexpr END_LINE expr RPAREN LBRACKET S RBRACKET
    (8) declarations -> . VAR ID ASSIGN expr
    (9) declarations -> . VAR ID ASSIGN relexpr
    (10) declarations -> . VAR ID
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    END_LINE        shift and go to state 16
    WRITE           shift and go to state 6
    WHILE           shift and go to state 2
    FOR             shift and go to state 5
    VAR             shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 11
    declarations                   shift and go to state 12
    S                              shift and go to state 15
    command                        shift and go to state 13
    statement                      shift and go to state 4

state 5

    (14) command -> FOR . LPAREN declarations END_LINE relexpr END_LINE expr RPAREN LBRACKET S RBRACKET

    LPAREN          shift and go to state 17


state 6

    (11) command -> WRITE . LPAREN expr RPAREN

    LPAREN          shift and go to state 18


state 7

    (0) S' -> S .



state 8

    (26) expr -> LPAREN . expr RPAREN
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 19

state 9

    (8) declarations -> VAR . ID ASSIGN expr
    (9) declarations -> VAR . ID ASSIGN relexpr
    (10) declarations -> VAR . ID

    ID              shift and go to state 20


state 10

    (22) expr -> ID . ASSIGN expr
    (25) expr -> ID .

    ASSIGN          shift and go to state 21
    PLUS            reduce using rule 25 (expr -> ID .)
    MINUS           reduce using rule 25 (expr -> ID .)
    TIMES           reduce using rule 25 (expr -> ID .)
    DIVIDE          reduce using rule 25 (expr -> ID .)
    MOD             reduce using rule 25 (expr -> ID .)
    INCREMENT       reduce using rule 25 (expr -> ID .)
    DECREMENT       reduce using rule 25 (expr -> ID .)
    RPAREN          reduce using rule 25 (expr -> ID .)
    END_LINE        reduce using rule 25 (expr -> ID .)
    WRITE           reduce using rule 25 (expr -> ID .)
    WHILE           reduce using rule 25 (expr -> ID .)
    FOR             reduce using rule 25 (expr -> ID .)
    VAR             reduce using rule 25 (expr -> ID .)
    ID              reduce using rule 25 (expr -> ID .)
    NUMBER          reduce using rule 25 (expr -> ID .)
    STRINGS         reduce using rule 25 (expr -> ID .)
    LPAREN          reduce using rule 25 (expr -> ID .)
    LT              reduce using rule 25 (expr -> ID .)
    LE              reduce using rule 25 (expr -> ID .)
    GT              reduce using rule 25 (expr -> ID .)
    GE              reduce using rule 25 (expr -> ID .)
    EQUALS          reduce using rule 25 (expr -> ID .)
    NE              reduce using rule 25 (expr -> ID .)
    AND             reduce using rule 25 (expr -> ID .)


state 11

    (7) statement -> expr .
    (15) expr -> expr . PLUS expr
    (16) expr -> expr . MINUS expr
    (17) expr -> expr . TIMES expr
    (18) expr -> expr . DIVIDE expr
    (19) expr -> expr . MOD expr
    (20) expr -> expr . INCREMENT
    (21) expr -> expr . DECREMENT

    END_LINE        reduce using rule 7 (statement -> expr .)
    WRITE           reduce using rule 7 (statement -> expr .)
    WHILE           reduce using rule 7 (statement -> expr .)
    FOR             reduce using rule 7 (statement -> expr .)
    VAR             reduce using rule 7 (statement -> expr .)
    ID              reduce using rule 7 (statement -> expr .)
    NUMBER          reduce using rule 7 (statement -> expr .)
    STRINGS         reduce using rule 7 (statement -> expr .)
    LPAREN          reduce using rule 7 (statement -> expr .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 27
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 28
    INCREMENT       shift and go to state 25
    DECREMENT       shift and go to state 26


state 12

    (6) statement -> declarations .

    END_LINE        reduce using rule 6 (statement -> declarations .)
    WRITE           reduce using rule 6 (statement -> declarations .)
    WHILE           reduce using rule 6 (statement -> declarations .)
    FOR             reduce using rule 6 (statement -> declarations .)
    VAR             reduce using rule 6 (statement -> declarations .)
    ID              reduce using rule 6 (statement -> declarations .)
    NUMBER          reduce using rule 6 (statement -> declarations .)
    STRINGS         reduce using rule 6 (statement -> declarations .)
    LPAREN          reduce using rule 6 (statement -> declarations .)


state 13

    (4) S -> command .
    (5) S -> command . END_LINE

    RBRACKET        reduce using rule 4 (S -> command .)
    $end            reduce using rule 4 (S -> command .)
    END_LINE        shift and go to state 29


state 14

    (12) command -> WHILE LPAREN . expr RPAREN LBRACKET S RBRACKET
    (13) command -> WHILE LPAREN . relexpr RPAREN LBRACKET S RBRACKET
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN
    (27) relexpr -> . expr LT expr
    (28) relexpr -> . expr LE expr
    (29) relexpr -> . expr GT expr
    (30) relexpr -> . expr GE expr
    (31) relexpr -> . expr EQUALS expr
    (32) relexpr -> . expr NE expr
    (33) relexpr -> . expr AND relexpr
    (34) relexpr -> . expr AND expr

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 31
    relexpr                        shift and go to state 30

state 15

    (1) S -> statement S .

    RBRACKET        reduce using rule 1 (S -> statement S .)
    $end            reduce using rule 1 (S -> statement S .)


state 16

    (2) S -> statement END_LINE . S
    (3) S -> statement END_LINE .
    (1) S -> . statement S
    (2) S -> . statement END_LINE S
    (3) S -> . statement END_LINE
    (4) S -> . command
    (5) S -> . command END_LINE
    (6) statement -> . declarations
    (7) statement -> . expr
    (11) command -> . WRITE LPAREN expr RPAREN
    (12) command -> . WHILE LPAREN expr RPAREN LBRACKET S RBRACKET
    (13) command -> . WHILE LPAREN relexpr RPAREN LBRACKET S RBRACKET
    (14) command -> . FOR LPAREN declarations END_LINE relexpr END_LINE expr RPAREN LBRACKET S RBRACKET
    (8) declarations -> . VAR ID ASSIGN expr
    (9) declarations -> . VAR ID ASSIGN relexpr
    (10) declarations -> . VAR ID
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    RBRACKET        reduce using rule 3 (S -> statement END_LINE .)
    $end            reduce using rule 3 (S -> statement END_LINE .)
    WRITE           shift and go to state 6
    WHILE           shift and go to state 2
    FOR             shift and go to state 5
    VAR             shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 11
    declarations                   shift and go to state 12
    S                              shift and go to state 32
    command                        shift and go to state 13
    statement                      shift and go to state 4

state 17

    (14) command -> FOR LPAREN . declarations END_LINE relexpr END_LINE expr RPAREN LBRACKET S RBRACKET
    (8) declarations -> . VAR ID ASSIGN expr
    (9) declarations -> . VAR ID ASSIGN relexpr
    (10) declarations -> . VAR ID

    VAR             shift and go to state 9

    declarations                   shift and go to state 33

state 18

    (11) command -> WRITE LPAREN . expr RPAREN
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 34

state 19

    (26) expr -> LPAREN expr . RPAREN
    (15) expr -> expr . PLUS expr
    (16) expr -> expr . MINUS expr
    (17) expr -> expr . TIMES expr
    (18) expr -> expr . DIVIDE expr
    (19) expr -> expr . MOD expr
    (20) expr -> expr . INCREMENT
    (21) expr -> expr . DECREMENT

    RPAREN          shift and go to state 35
    PLUS            shift and go to state 24
    MINUS           shift and go to state 27
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 28
    INCREMENT       shift and go to state 25
    DECREMENT       shift and go to state 26


state 20

    (8) declarations -> VAR ID . ASSIGN expr
    (9) declarations -> VAR ID . ASSIGN relexpr
    (10) declarations -> VAR ID .

    ASSIGN          shift and go to state 36
    END_LINE        reduce using rule 10 (declarations -> VAR ID .)
    WRITE           reduce using rule 10 (declarations -> VAR ID .)
    WHILE           reduce using rule 10 (declarations -> VAR ID .)
    FOR             reduce using rule 10 (declarations -> VAR ID .)
    VAR             reduce using rule 10 (declarations -> VAR ID .)
    ID              reduce using rule 10 (declarations -> VAR ID .)
    NUMBER          reduce using rule 10 (declarations -> VAR ID .)
    STRINGS         reduce using rule 10 (declarations -> VAR ID .)
    LPAREN          reduce using rule 10 (declarations -> VAR ID .)


state 21

    (22) expr -> ID ASSIGN . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 37

state 22

    (18) expr -> expr DIVIDE . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 38

state 23

    (17) expr -> expr TIMES . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 39

state 24

    (15) expr -> expr PLUS . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 40

state 25

    (20) expr -> expr INCREMENT .

    PLUS            reduce using rule 20 (expr -> expr INCREMENT .)
    MINUS           reduce using rule 20 (expr -> expr INCREMENT .)
    TIMES           reduce using rule 20 (expr -> expr INCREMENT .)
    DIVIDE          reduce using rule 20 (expr -> expr INCREMENT .)
    MOD             reduce using rule 20 (expr -> expr INCREMENT .)
    INCREMENT       reduce using rule 20 (expr -> expr INCREMENT .)
    DECREMENT       reduce using rule 20 (expr -> expr INCREMENT .)
    RPAREN          reduce using rule 20 (expr -> expr INCREMENT .)
    END_LINE        reduce using rule 20 (expr -> expr INCREMENT .)
    WRITE           reduce using rule 20 (expr -> expr INCREMENT .)
    WHILE           reduce using rule 20 (expr -> expr INCREMENT .)
    FOR             reduce using rule 20 (expr -> expr INCREMENT .)
    VAR             reduce using rule 20 (expr -> expr INCREMENT .)
    ID              reduce using rule 20 (expr -> expr INCREMENT .)
    NUMBER          reduce using rule 20 (expr -> expr INCREMENT .)
    STRINGS         reduce using rule 20 (expr -> expr INCREMENT .)
    LPAREN          reduce using rule 20 (expr -> expr INCREMENT .)
    LT              reduce using rule 20 (expr -> expr INCREMENT .)
    LE              reduce using rule 20 (expr -> expr INCREMENT .)
    GT              reduce using rule 20 (expr -> expr INCREMENT .)
    GE              reduce using rule 20 (expr -> expr INCREMENT .)
    EQUALS          reduce using rule 20 (expr -> expr INCREMENT .)
    NE              reduce using rule 20 (expr -> expr INCREMENT .)
    AND             reduce using rule 20 (expr -> expr INCREMENT .)


state 26

    (21) expr -> expr DECREMENT .

    PLUS            reduce using rule 21 (expr -> expr DECREMENT .)
    MINUS           reduce using rule 21 (expr -> expr DECREMENT .)
    TIMES           reduce using rule 21 (expr -> expr DECREMENT .)
    DIVIDE          reduce using rule 21 (expr -> expr DECREMENT .)
    MOD             reduce using rule 21 (expr -> expr DECREMENT .)
    INCREMENT       reduce using rule 21 (expr -> expr DECREMENT .)
    DECREMENT       reduce using rule 21 (expr -> expr DECREMENT .)
    RPAREN          reduce using rule 21 (expr -> expr DECREMENT .)
    END_LINE        reduce using rule 21 (expr -> expr DECREMENT .)
    WRITE           reduce using rule 21 (expr -> expr DECREMENT .)
    WHILE           reduce using rule 21 (expr -> expr DECREMENT .)
    FOR             reduce using rule 21 (expr -> expr DECREMENT .)
    VAR             reduce using rule 21 (expr -> expr DECREMENT .)
    ID              reduce using rule 21 (expr -> expr DECREMENT .)
    NUMBER          reduce using rule 21 (expr -> expr DECREMENT .)
    STRINGS         reduce using rule 21 (expr -> expr DECREMENT .)
    LPAREN          reduce using rule 21 (expr -> expr DECREMENT .)
    LT              reduce using rule 21 (expr -> expr DECREMENT .)
    LE              reduce using rule 21 (expr -> expr DECREMENT .)
    GT              reduce using rule 21 (expr -> expr DECREMENT .)
    GE              reduce using rule 21 (expr -> expr DECREMENT .)
    EQUALS          reduce using rule 21 (expr -> expr DECREMENT .)
    NE              reduce using rule 21 (expr -> expr DECREMENT .)
    AND             reduce using rule 21 (expr -> expr DECREMENT .)


state 27

    (16) expr -> expr MINUS . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 41

state 28

    (19) expr -> expr MOD . expr
    (15) expr -> . expr PLUS expr
    (16) expr -> . expr MINUS expr
    (17) expr -> . expr TIMES expr
    (18) expr -> . expr DIVIDE expr
    (19) expr -> . expr MOD expr
    (20) expr -> . expr INCREMENT
    (21) expr -> . expr DECREMENT
    (22) expr -> . ID ASSIGN expr
    (23) expr -> . NUMBER
    (24) expr -> . STRINGS
    (25) expr -> . ID
    (26) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 10
    NUMBER          shift and go to state 1
    STRINGS         shift and go to state 3
    LPAREN          shift and go to state 8

    expr                           shift and go to state 42

state 29

    (5) S -> command END_LINE .

    RBRACKET        reduce using rule 5 (S -> command END_LINE .)
    $end            reduce using rule 5 (S -> command END_LINE .)


state 30

    (13) command -> WHILE LPAREN relexpr . RPAREN LBRACKET S RBRACKET

    RPAREN          shift and go to state 43


state 31

    (12) command -> WHILE LPAREN expr . RPAREN LBRACKET S RBRACKET
    (15) expr -> expr . PLUS expr
    (16) expr -> expr . MINUS expr
    (17) expr -> expr . TIMES expr
    (18) expr -> expr . DIVIDE expr
    (19) expr -> expr . MOD expr
    (20) expr -> expr . INCREMENT
    (21) expr -> expr . DECREMENT
    (27) relexpr -> expr . LT expr
    (28) relexpr -> expr . LE expr
    (29) relexpr -> expr . GT expr
    (30) relexpr -> expr . GE expr
    (31) relexpr -> expr . EQUALS expr
    (32) relexpr -> expr . NE expr
    (33) relexpr -> expr . AND relexpr
    (34) relexpr -> expr . AND expr

    RPAREN          shift and go to state 44
    PLUS            shift and go to state 24
    MINUS           shift and go to state 27
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 28
    INCREMENT       shift and go to state 25
    DECREMENT       shift and go to state 26
    LT              shift and go to state 46
    LE              shift and go to state 49
    GT              shift and go to state 47
    GE              shift and go to state 51
    EQUALS          shift and go to state 48
    NE              shift and go to state 45
    AND             shift and go to state 50


state 32

    (2) S -> statement END_LINE S .

    RBRACKET        reduce using rule 2 (S -> statement END_LINE S .)
    $end            reduce using rule 2 (S -> statement END_LINE S .)


state 33

    (14) command -> FOR LPAREN declarations . END_LINE relexpr END_LINE expr RPAREN LBRACKET S RBRACKET

    END_LINE        shift and go to state 52


state 34

    (11) command -> WRITE LPAREN expr . RPAREN
    (15) expr -> expr . PLUS expr
    (16) expr -> expr . MINUS expr
    (17) expr -> expr . TIMES expr
    (18) expr -> expr . DIVIDE expr
    (19) expr -> expr . MOD expr
    (20) expr -> expr . INCREMENT
    (21) expr -> expr . DECREMENT

    RPAREN          shift and go to state 53
    PLUS            shift and go to state 24
    MINUS           shift and go to state 27
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 22
    MOD             shift and go to state 28
    INCREMENT       shift and go to state 25
    DECREMENT       shift and go to state 26


state 35

    (26) expr -> LPAREN expr RPAREN .

    PLUS            reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    MINUS           reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    TIMES           reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    DIVIDE          reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    MOD             reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    INCREMENT       reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    DECREMENT       reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    RPAREN          reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    END_LINE        reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    WRITE           reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    WHILE           reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    FOR             reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    VAR             reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    ID              reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    NUMBER          reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    STRINGS         reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    LPAREN          reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    LT              reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    LE              reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    GT              reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    GE              reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    EQUALS          reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    NE              reduce using rule 26 (expr -> LPAREN expr RPAREN .)
    AND             reduce using rule 26 (expr -> LPAREN expr RPAREN .)


state 36
